# learn-bash

./: .gitignore  README.md  contributors.txt
EndeavourOS Installation/: README.md  step-01.avif  step-02.avif  step-03.avif  step-04.avif  step-05.avif  step-06.avif  step-07.avif  step-08.avif  step-09.avif  step-10.avif  step-11.avif
bash/code/extra/python/: script.py
bash/code/lab01/: README.md
bash/code/lab02/: README.md  es21.sh  es210.sh  es22.sh  es23.sh  es24.sh  es26.sh  es28.sh  es29.sh
bash/code/lab03/: es31_find.sh  es31_recursive.sh  es32.sh  es33.sh  es34.sh  es35.sh  es36.sh  es37.sh  es38.sh  es39.sh
bash/code/lab04/: README.md  es41.sh  es42.sh  es43.sh  es44.sh  es45.sh  es46.sh  es47.sh  es48.sh  es49.sh
bash/slides/markdown/: 01 - Bash Intro.md  02 - Bash shell.md  03 - Bash scripts.md
bash/slides/markdown/images/: combinare-comandi.avif  de-gnome-mac.avif  de-hyprland.avif  esempi-1.avif  flussi-dati-standard.avif  flussi-dati.avif  multitasking.avif  top-gtop.avif  top-htop.avif
c/code/: CMakeLists.txt
c/code/examples/: array_pointer.c  dynamic_matrix_double.c  dynamic_matrix_single.c  example.c  file_copy_binary.c  file_copy_text.c  file_position.c  printf_scanf.c  printf_types.c  vector_sort.c  vector_sort_function_pointer.c  vector_sort_function_pointer_struct.c
c/code/lab01/: 0101.c  0102.c  0103.c  0104.c  0105.c  0106.c  0107.c  0108.c  0109.c  0110.c  0111.c  0112.c  0113.c  0114.c  0115.c  0116.c  0117.c  0118.c  0119.c  0120.c  README.md
c/code/lab02/: 0201.c  0202.c  0203.c  0204.c  0205.c  0206.c  0207.c  0208.c  0209.c  0210.c  0211.c  0212.c  0213.c  0214.c  0215.c  0216.c  0217.c  0218.c  README.md
c/code/lab03/: 0301.c  0302.c  0303.c  0304.c  0305.c  0306.c  0307.c  0308.c  0309.c  0310.c  0311.c  README.md
c/code/lab04/: 0401.c  0402.c  0403.c  0404.c  0405.c  0406.c  0407.c  0408.c  0409.c  0410.c  0411.c  0412.c  0413.c  0414.c  0415.c  README.md
c/code/lab05/: README.md  cat.c  cmp.c  cp.c  echo.c  grep.c  head.c  size.c  tail.c  touch.c  wc.c
c/code/labs01/: README.md  s011.c  s014.c  s015.c  s016.c  s017.c  s018.c  s019.c
c/code/labs02/: README.md  s021.c  s022.c  s023.c  s024.c  s025.c  s026.c  s027.c  s028.c  s029.c
c/code/labs03/: README.md  s031.c  s032.c  s033.c  s034.c  s035.c  s036.c  s037.c  s038.c  s039.c
c/code/labs04/: README.md  s041.c  s042.c  s043.c  s044.c  s045.c
c/code/utils/: utils.h
c/slides/markdown/: 01 - Introduzione.md  02 - Preprocessore.md  03 - Strutture di controllo.md  04 - Tipi di dati.md  05 - Funzioni.md  06 - Tipi di dati derivati.md  07 - Puntatori.md  08 - File.md  makefile
c/slides/markdown/images/: allocazione_matrice.avif  allocazione_struct.avif  array.avif  compilazione.avif  literals_interi.avif  matrici_memoria.avif  matrici_memoria.drawio  memory_layout.avif  others.pptx  passaggio_riferimento.avif  passaggio_valore.avif  puntatore.avif  puntatore_puntatore_char.avif  puntatore_vettore.avif  rappresentazione_double_float.avif  rappresentazione_int.avif  variabile_memoria.avif  variabili.avif  vettore_stringhe.avif
code/bash/extra/: FCP.sh  FCR.sh  benchmark.sh
code/bash/extra/template/: FCR.sh  README.md
code/bash/lab01/: README.md
code/bash/lab02/: README.md  es21.sh  es22.sh  es23.sh  es24.sh  es25.sh  es26.sh  es27.sh  es28.sh  es29.sh
code/bash/lab03/: README.md  es31p.sh  es31r.sh  es32p.sh  es32r.sh  es33p.sh  es33r.sh  es34p.sh  es34r.sh  es35p.sh  es35r.sh  es36p.sh  es36r.sh
code/bash/lab04/: README.md  es41p.sh  es41r.sh  es42p.sh  es42r.sh  es43p.sh  es43r.sh  es44p.sh  es44r.sh  es45p.sh  es45r.sh  es46p.sh  es46r.sh  es47p.sh  es47r.sh
code/c/extra/: main.c  makefile
code/c/lab01/: README.md  es11.c  es12.c  es13.c  es14.c  es15.c  es16.c  es17.c  es18.c  es19.c  makefile  makefile.simple
code/c/lab02/: README.md  es21.c  es22.c  es23.c  es24.c  es25.c  es26.c  es27.c  es28.c  es29.c  makefile
code/c/lab03/: README.md  es31.c  es310.c  es311.c  es312.c  es313.c  es32.c  es33.c  es34.c  es35.c  es36.c  es37.c  es38.c  es39.c  makefile
code/c/lab04/: README.md  es41.c  es42.c  es43.c  es44.c  es45.c  makefile
code/c/utils/: utils.c  utils.h
code/extra/getopt/: example.sh
code/extra/python/: script.sh
code/lab01/: README.md
code/lab02/: README.md
code/lab03/: README.md  es21.sh  es210.sh  es22.sh  es23.sh  es24.sh  es25.sh  es26.sh  es27.sh  es29.sh  es31_find.sh  es31_recursive.sh  es32.sh  es33.sh  es34.sh  es35.sh  es36.sh  es37.sh  es38.sh  es39.sh  es41.sh  es42.sh  es43.sh  es44.sh  es46.sh  es47.sh
code/lab04/: README.md
install_guide/: README.md
slides/: 01 - Bash Intro.md  01 - Introduzione a Unix.md  02 - Bash shell.md  03 - Bash scripting.md  make.pptx  virtualization.pptx
slides/images/: architettura-interna.avif  bit-di-protezione.avif  chmod-chown.avif  de-cinnamon.avif  de-elementary.avif  de-gnome.avif  de-hyprland.avif  de-plasma.avif  esempi-2.avif  esempio-mount.avif  file-e-metadati.avif  funzionalità-principali-os.avif  genealogia-famiglia-unix.avif  i-node.avif  implementazione-pipes.avif  implementazione-ridirezione-input.avif  implementazione-ridirezione-output.avif  interazione-kernel-applicazioni.avif  linux-kernel-map.avif  mobile-market-share.avif  monolitici-micro-ibridi.avif  nomi-assoluti-e-relativi.avif  quanto-è-complesso-un-kernel.avif  struttura-file-system.avif  terminale-testuale.avif  top-btop.avif  top.avif  total-market-share.avif
(+9 files in other folders)
