cmake_minimum_required(VERSION 3.17)
project(operatingsystemsbsc C)

set(CMAKE_C_FLAGS "-Wall -Wconversion -Wformat")
set(CMAKE_C_STANDARD 99)

# Examples
#add_executable(example examples/example.c)
#add_executable(file_copy_binary examples/file_copy_binary.c)
#add_executable(file_copy_text examples/file_copy_text.c)
#add_executable(file_position examples/file_position.c)
#add_executable(printf_scanf examples/printf_scanf.c)
#add_executable(matrix_single examples/dynamic_matrix_single.c)
#add_executable(matrix_double examples/dynamic_matrix_double.c)
#add_executable(array_pointer examples/array_pointer.c)
#add_executable(printf_types examples/printf_types.c)
#add_executable(vector_sort examples/vector_sort.c)
#add_executable(vector_sort_function_pointer examples/vector_sort_function_pointer.c)
#add_executable(vector_sort_function_pointer_struct examples/vector_sort_function_pointer_struct.c)

# Basic Programming lab01
#add_executable(0101 lab01/0101.c)
#add_executable(0102 lab01/0102.c)
#add_executable(0103 lab01/0103.c)
#add_executable(0104 lab01/0104.c)
#add_executable(0105 lab01/0105.c)
#add_executable(0106 lab01/0106.c)
#add_executable(0107 lab01/0107.c)
#add_executable(0108 lab01/0108.c)
#add_executable(0109 lab01/0109.c)
#add_executable(0110 lab01/0110.c)
#add_executable(0111 lab01/0111.c)
#add_executable(0112 lab01/0112.c)
#add_executable(0113 lab01/0113.c)
#add_executable(0114 lab01/0114.c)
#add_executable(0115 lab01/0115.c)
#add_executable(0116 lab01/0116.c)
#add_executable(0117 lab01/0117.c)
#add_executable(0118 lab01/0118.c)
#add_executable(0119 lab01/0119.c)
#add_executable(0120 lab01/0120.c)

# Basic Programming lab02
#add_executable(0201 lab02/0201.c)
#add_executable(0202 lab02/0202.c)
#add_executable(0203 lab02/0203.c)
#add_executable(0204 lab02/0204.c)
#add_executable(0205 lab02/0205.c)
#add_executable(0206 lab02/0206.c)
#add_executable(0207 lab02/0207.c)
#add_executable(0208 lab02/0208.c)
#add_executable(0209 lab02/0209.c)
#add_executable(0210 lab02/0210.c)
#add_executable(0211 lab02/0211.c)
#add_executable(0212 lab02/0212.c)
#add_executable(0213 lab02/0213.c)
#add_executable(0214 lab02/0214.c)
#add_executable(0215 lab02/0215.c)
#add_executable(0216 lab02/0216.c)
#add_executable(0217 lab02/0217.c)
#add_executable(0218 lab02/0218.c)

# Basic Programming lab03
#add_executable(0301 lab03/0301.c)
#add_executable(0302 lab03/0302.c)
#add_executable(0303 lab03/0303.c)
#add_executable(0304 lab03/0304.c)
#add_executable(0305 lab03/0305.c)
#add_executable(0306 lab03/0306.c)
#add_executable(0307 lab03/0307.c)
#add_executable(0308 lab03/0308.c)
#add_executable(0309 lab03/0309.c)
#add_executable(0310 lab03/0310.c)
#add_executable(0311 lab03/0311.c)

# Basic Programming lab04
#add_executable(0401 lab04/0401.c)
#add_executable(0402 lab04/0402.c)
#add_executable(0403 lab04/0403.c)
#add_executable(0404 lab04/0404.c)
#add_executable(0405 lab04/0405.c)
#add_executable(0406 lab04/0406.c)
#add_executable(0407 lab04/0407.c)
#add_executable(0408 lab04/0408.c)
#add_executable(0409 lab04/0409.c)
#add_executable(0410 lab04/0410.c)
#add_executable(0411 lab04/0411.c)
#add_executable(0412 lab04/0412.c)
#add_executable(0413 lab04/0413.c)
#add_executable(0414 lab04/0414.c)
#add_executable(0415 lab04/0415.c)

# Basic Programming lab05
#add_executable(cat lab05/cat.c)
#add_executable(cmp lab05/cmp.c)
#add_executable(cp lab05/cp.c)
#add_executable(echo lab05/echo.c)
#add_executable(touch lab05/touch.c)
#add_executable(size lab05/size.c)
#add_executable(wc lab05/wc.c)
#add_executable(grep lab05/grep.c)
#add_executable(head lab05/head.c)
#add_executable(tail lab05/tail.c)


# System Programming labs01
#add_executable(s011 labs01/s011.c utils/utils.c)
#add_executable(s012 labs01/s012.c utils/utils.c)
#add_executable(s013 labs01/s013.c utils/utils.c)
#add_executable(s014 labs01/s014.c utils/utils.c)
#add_executable(s015 labs01/s015.c utils/utils.c)
#add_executable(s016 labs01/s016.c utils/utils.c)
#add_executable(s017 labs01/s017.c utils/utils.c)
#add_executable(s018 labs01/s018.c utils/utils.c)
#add_executable(s019 labs01/s019.c utils/utils.c)

# System Programming labs02
#add_executable(s021 labs02/s021.c utils/utils.c)
#add_executable(s022 labs02/s022.c utils/utils.c)
#add_executable(s023 labs02/s023.c utils/utils.c)
#add_executable(s024 labs02/s024.c utils/utils.c)
#add_executable(s025 labs02/s025.c utils/utils.c)
#add_executable(s026 labs02/s026.c utils/utils.c)
#add_executable(s027 labs02/s027.c utils/utils.c)
#add_executable(s028 labs02/s028.c utils/utils.c)
#add_executable(s029 labs02/s029.c utils/utils.c)

# System Programming labs03
#add_executable(s031 labs03/s031.c utils/utils.c)
#add_executable(s032 labs03/s032.c utils/utils.c)
#add_executable(s033 labs03/s033.c utils/utils.c)
#add_executable(s034 labs03/s034.c utils/utils.c)
#add_executable(s035 labs03/s035.c utils/utils.c)
#add_executable(s036 labs03/s036.c utils/utils.c)
#add_executable(s037 labs03/s037.c utils/utils.c)
#add_executable(s038 labs03/s038.c utils/utils.c)
#add_executable(s039 labs03/s039.c utils/utils.c)

# System Programming labs04
#add_executable(s041 labs04/s041.c utils/utils.c)
#add_executable(s042 labs04/s042.c utils/utils.c)
#add_executable(s043 labs04/s043.c utils/utils.c)
#add_executable(s044 labs04/s044.c utils/utils.c)
#add_executable(s045 labs04/s045.c utils/utils.c)




